feat: implement proxy sidecar injection with headless service discovery for embedded Infinispan (#27)
Signed-off-by: Vaishnav88sk <vaishnavsk8804@gmail.com>